Added image to placeholder html page

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>MadeWithDad</h1>
-<p>Placeholder.</p>
+<img src="images/Butterfly.png" alt="Butterfly" height="480"/>
+<h1>madewithdad</h1>
 </body>
 </html>
