--- a/404.html
+++ b/404.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<img src="images/Flower1.png" alt="Butterfly" height="480"/>
+<img src="images/Flower1.png" alt="Not found" height="480"/>
 <h1>nope :(</h1>
 </body>
 </html>
