--- a/index.html
+++ b/index.html
@@ -1,7 +1,22 @@
 <!DOCTYPE html>
 <html>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+div.title {
+  text-align: center;
+}
+</style>
+</head>
 <body>
-<img src="images/Butterfly.png" alt="Butterfly" height="480"/>
+<img src="images/Butterfly.png" alt="Not found" height="480" >
+<div class="title">
 <h1>madewithdad</h1>
+</div>
 </body>
 </html>
